Fixed byline spacing, full-width video, and made horizontal spacing into percentages for some elements

--- a/docroot/themes/custom/ucsf_edu/components/_patterns/03-organisms/title/_basic-article.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/03-organisms/title/_basic-article.scss
@@ -42,6 +42,7 @@
   font-size: 20px;
   line-height: 1.6;
   color: $gray-blue;
+  margin: 0;
 
   @include medium {
     font-size: 24px;
@@ -56,6 +57,7 @@
   width: 64%;
   margin-top: $space;
   margin-bottom: $space-four;
+  padding-bottom: $space-four;
   border-bottom: 1px solid $gray-lighter;
 
   a {
@@ -100,7 +102,7 @@ h2 {
   float: left;
   margin: $space-decuple;
   margin-top: 0;
-  margin-left: -230px;
+  margin-left: -25%;
   margin-bottom: $space-quadruple;
   width: 487px;
 
@@ -110,7 +112,7 @@ h2 {
     font-size: $font-size-xsm;
     color: $gray-blue;
     padding-top: $space-double;
-    padding-left: 230px;
+    padding-left: 45%;
     font-family: $font-helvetica-neue-roman;
     font-weight: 500;
     line-height: 1.6em;
@@ -141,24 +143,23 @@ h2 {
 .video.article-full-width {
   //width: 128%;
   margin: $space-ten;
-  margin-left: -24%;
-  margin-right: -24%;
-  padding-bottom: 79%;
+  margin-left: -9.5%;
+  margin-right: -9.5%;
+  padding-bottom: 63%;
   //height: 100%;
 }
 
 .full-bleed-image {
-  width: 157%;
-  margin-left: -230px;
-  margin-right: -230px;
-  //height: 100%;
+  margin: $space-ten;
+  margin-left: -20%;
+  margin-right: -20%;
 
   .full-bleed-image__caption {
     font-size: $font-size-xsm;
     color: $gray-blue;
     padding-top: $space-double;
-    padding-left: 230px;
-    padding-right: 230px;
+    padding-left: 15%;
+    padding-right: 15%;
     font-family: $font-helvetica-neue-roman;
     font-weight: 500;
     line-height: 1.6em;
@@ -168,9 +169,9 @@ h2 {
 .callout-left {
   float: left;
   background: $background-gray;
-  margin: $space-decuple;
+  margin: 10%;
   margin-top: 0;
-  margin-left: -120px;
+  margin-left: -15%;
   margin-bottom: $space-quadruple;
   width: 50%;
   padding: 80px;
