--- a/docroot/themes/custom/ucsf_edu/components/_patterns/04-templates/_article.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/04-templates/_article.scss
@@ -10,7 +10,7 @@
   //width: $page-narrow;
   background: $white;
   margin-top: $space-decuple;
-  padding: $space-decuple 8%;
+  padding: 80px 8%;
   position: relative;
   grid-column: 3 / -3;
 
@@ -34,7 +34,7 @@
     background-color: rgba(255, 255, 255, 0.8);
     grid-column: 2 / -1;
     grid-row: 2 / -1;
-    padding: 56px 56px 0 96px;
+    padding: 5% 5% 0 8%;
 
     h1 {
       font-size: 82px;
@@ -47,6 +47,7 @@
 
     .article-header__author {
       border-bottom: none;
+      margin-bottom: 0;
     }
   }
 }
